# coding_playground

./: .gitignore  README.md
estimation_ws/: .gitignore  README.md
estimation_ws/src/imu_orientation_estimator/: CMakeLists.txt  package.xml
estimation_ws/src/imu_orientation_estimator/cfg/: Params.cfg
estimation_ws/src/imu_orientation_estimator/include/imu_orientation_estimator/: imu_orientation_estimator.h
estimation_ws/src/imu_orientation_estimator/src/: imu_orientation_estimator.cpp  main.cpp
manif-examples-test-matlab/: rot2rpy.m  se23Out.txt  se2_3_localizationModified.m  se2_3imuDLGEKF.m  se2_3localization.m  se3IMUlocalization.m  se3Out.txt  se3localization.m
manif-examples-test-matlab/+LieGroups/: SE3.m  SE_2_3.m
transformTest/: CMakeLists.txt  README.md
transformTest/src/: tf_test.cpp
visualodometry/: CMakeLists.txt
visualodometry/include/: Calibrator.h  VisualOdom.h
visualodometry/src/: Calibrator.cpp  VisualOdom.cpp  main.cpp  temp.cpp
